--- a/src/main/java/gui/component/Menu.form
+++ b/src/main/java/gui/component/Menu.form
@@ -49,8 +49,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="77" max="32767" attributes="0"/>
-              <Component id="scrollPanel" min="-2" pref="558" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+              <Component id="scrollPanel" pref="558" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
